# falcon-fklab-extensions

./: .clang-format  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md
.github/workflows/: build.yml
datatypes/: exclude.txt
datatypes/behaviordata/: CMakeLists.txt  behaviordata.cpp  behaviordata.hpp
datatypes/columnsdata/: columnsdata.hpp
datatypes/eventdata/: CMakeLists.txt  eventdata.cpp  eventdata.cpp.autosave  eventdata.fbs  eventdata.hpp  eventdata_generated.h
datatypes/likelihooddata/: CMakeLists.txt  likelihooddata.cpp  likelihooddata.hpp
datatypes/muadata/: CMakeLists.txt  muadata.cpp  muadata.hpp
datatypes/multichanneldata/: CMakeLists.txt  multichanneldata.fbs  multichanneldata.hpp  multichanneldata_generated.h
datatypes/scalardata/: scalardata.hpp
datatypes/spikedata/: CMakeLists.txt  channelvalidity.cpp  channelvalidity.hpp  spikedata.cpp  spikedata.hpp  spikedata_common.hpp
datatypes/timeseriesdata/: timeseriesdata.hpp
datatypes/vectordata/: vectordata.hpp
devices/arduino/: CMakeLists.txt  arduino.cpp  arduino.hpp
devices/blackhole/: CMakeLists.txt  blackhole.cpp  blackhole.hpp
devices/logger/: CMakeLists.txt  logger.cpp  logger.hpp
docs/: Makefile  conf.py  content_table.rst  datatypes.rst  example.rst  hardware.rst  index.rst  libs.rst  make.bat  processors.rst  requirements.txt  resource.rst  tools.rst
docs/_templates/: template_processor.tmpl
docs/datatype_description/: columndata.rst  eventdata.rst  muadata.rst  multichanneldata.rst  scalardata.rst  spikedata.rst  timeseriesdata.rst  vectordata.rst
docs/examples/: graph.rst  overview.rst  ripple_detection.rst
docs/hardware/: advantech.rst  arduino.rst  neuralynx.rst  openephys.rst
docs/libs/: dio_lib.rst  dsp_lib.rst  nlx_lib.rst
docs/processors_description/: detectors.rst  events.rst  examples.rst  processors.rst  serializers.rst  signal_generators_filters_converters.rst
docs/tools/: filter_test.rst  nlxtestbench.rst
lib/: CMakeLists.txt
lib/arduinoserial/: CMakeLists.txt  arduino-serial-lib.cpp  arduino-serial-lib.h
lib/dio/: CMakeLists.txt  dio.cpp  dio.hpp  dummydio.cpp  dummydio.hpp  protocol.cpp  protocol.hpp
lib/dsp/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  algorithms.ipp  behavior_algorithms.cpp  behavior_algorithms.hpp  filter.cpp  filter.hpp  (+3 more)
lib/tests/: CMakeLists.txt  tests_recording_utilities.cpp
processors/: exclude.txt
processors/openephysZMQ/: CMakeLists.txt  channel.fbs  channel_generated.h  doc.yaml  openephysZMQ.cpp  openephysZMQ.hpp
processors/websocket_sink/: CMakeLists.txt  uws_server.cpp  websocket_sink.cpp
scripts/: format.sh
tests/: burstdetectortest.cpp
tools/: CMakeLists.txt
tools/nlxtestbench/: CMakeLists.txt  common.hpp  config.cpp  config.hpp  datasource.cpp  datasource.hpp  datastreamer.cpp  datastreamer.hpp  filesource.cpp  filesource.hpp  main.cpp  ripplesource.cpp  ripplesource.hpp  sinesource.cpp  sinesource.hpp  square.yaml  squaresource.cpp  squaresource.hpp  stream_file.yaml  whitenoisesource.cpp  whitenoisesource.hpp
(+255 files in other folders)
